// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhooksAnimatedDocsIcon should match a snapshot where animated 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <svg
        class="mock-css.
  #webhooks-docs-svg-element-one {
    animation: webhooks-docs-svg-element-one 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-one {
    0% {
      transform: translate(69.99835px, 61.58215px);
    }
    100% {
      transform: translate(69.99835px, 58.58215px);
    }
  }
  #webhooks-docs-svg-element-two {
    animation: webhooks-docs-svg-element-two 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-two {
    0% {
      transform: translate(94.509052px, 61.58215px);
    }
    100% {
      transform: translate(94.509052px, 58.58215px);
    }
  }
  #webhooks-docs-svg-element-three {
    animation: webhooks-docs-svg-element-three 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-three {
    0% {
      transform: translate(69.649327px, 82.061558px);
    }
    100% {
      transform: translate(69.649327px, 79.061558px);
    }
  }
  #webhooks-docs-svg-element-four {
    animation: webhooks-docs-svg-element-four 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-four {
    0% {
      transform: translate(36.9986px, 80.849051px);
    }
    100% {
      transform: translate(36.9986px, 77.849051px);
    }
  }
  #webhooks-docs-svg-element-five {
    animation: webhooks-docs-svg-element-five 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-five {
    0% {
      transform: translate(102.997547px, 80.848101px);
    }
    100% {
      transform: translate(102.997547px, 77.848101px);
    }
  }
  #webhooks-docs-svg-element-six {
    animation: webhooks-docs-svg-element-six 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-six {
    0% {
      transform: translate(89.264528px, 45.746041px);
    }
    100% {
      transform: translate(87.398217px, 52.544365px);
    }
  }
  #webhooks-docs-svg-element-seven {
    animation: webhooks-docs-svg-element-seven 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-seven {
    0% {
      transform: rotate(-67.423922deg);
    }
    100% {
      transform: rotate(-103deg);
    }
  }
  #webhooks-docs-svg-element-eight {
    animation: webhooks-docs-svg-element-eight 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-eight {
    0% {
      transform: skewX(-1.018603deg) skewY(0deg) scale(1, 0.999842);
    }
    100% {
      transform: skewX(-1.018603deg) skewY(0deg) scale(1.5, 1.5);
    }
  }
  #webhooks-docs-svg-element-nine {
    animation: webhooks-docs-svg-element-nine 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-nine {
    0% {
      offset-distance: 0%;
    }
    100% {
      offset-distance: 100%;
    }
  }
  #webhooks-docs-svg-element-ten {
    animation: webhooks-docs-svg-element-ten 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-ten {
    0% {
      transform: rotate(-25.945515deg);
    }
    100% {
      transform: rotate(47deg);
    }
  }
  #webhooks-docs-svg-element-eleven {
    animation: webhooks-docs-svg-element-eleven 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-eleven {
    0% {
      transform: skewX(0.740377deg) skewY(0deg) scale(0.999999, 0.999917);
    }
    100% {
      transform: skewX(0.740377deg) skewY(0deg) scale(1.3, 1.3);
    }
  }
  #webhooks-docs-svg-element-twelve {
    animation: webhooks-docs-svg-element-twelve 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-twelve {
    0% {
      offset-distance: 0%;
    }
    100% {
      offset-distance: 100%;
    }
  }
  #webhooks-docs-svg-element-thirteen {
    animation: webhooks-docs-svg-element-thirteen 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-thirteen {
    0% {
      transform: rotate(18.101295deg);
    }
    100% {
      transform: rotate(-62deg);
    }
  }
  #webhooks-docs-svg-element-fourteen {
    animation: webhooks-docs-svg-element-fourteen 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-fourteen {
    0% {
      transform: skewX(0.486255deg) skewY(0deg) scale(1, 0.999964);
    }
    100% {
      transform: skewX(0.486255deg) skewY(0deg) scale(1.3, 1.3);
    }
  }
  #webhooks-docs-svg-element-fifteen {
    animation: webhooks-docs-svg-element-fifteen 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-fifteen {
    0% {
      transform: translate(45.246065px, 111.063275px) scale(1, 1);
    }
    100% {
      transform: translate(45.246065px, 111.063275px) scale(0.8, 0.8);
    }
  }
"
        id="exzbnYXRMC51"
        shape-rendering="geometricPrecision"
        text-rendering="geometricPrecision"
        viewBox="0 0 140 140"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g
          clip-path="url(#exzbnYXRMC526)"
          id="exzbnYXRMC52"
        >
          <g
            id="exzbnYXRMC53"
          >
            <g
              id="webhooks-docs-svg-element-one"
              transform="translate(69.99835,61.58215)"
            >
              <path
                d="M119.024,61.4515L69.9983,44.21L20.9727,61.4515L69.9983,78.9543L119.024,61.4515Z"
                fill="rgb(35,164,222)"
                id="exzbnYXRMC54"
                stroke="none"
                stroke-width="1"
                transform="translate(-69.99835,-61.58215)"
              />
            </g>
            <g
              id="webhooks-docs-svg-element-two"
              transform="translate(94.509052,61.58215)"
            >
              <path
                d="M119.022,61.4515L69.9961,44.21L69.9961,78.9543L119.022,61.4515Z"
                fill="rgb(0,97,168)"
                id="exzbnYXRMC55"
                stroke="none"
                stroke-width="1"
                transform="translate(-94.509052,-61.58215)"
              />
            </g>
            <g
              id="exzbnYXRMC56"
              transform="matrix(1 0 0 1 0.000001 0)"
            >
              <g
                id="exzbnYXRMC57"
                transform="matrix(1 0 0 1 0.000001 0)"
              >
                <path
                  d="M88.5528,8.83691L50.3176,8.83691C46.6078,8.83691,43.5898,11.9163,43.5898,15.7005L43.5898,97.8934C43.5898,101.678,46.6078,104.757,50.3176,104.757L88.5528,104.757C92.2626,104.757,95.2814,101.678,95.2814,97.8934L95.2814,15.7005C95.2814,11.9163,92.2626,8.83691,88.5528,8.83691L88.5528,8.83691Z"
                  fill="rgb(38,47,105)"
                  id="exzbnYXRMC58"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M88.529,12.8105L82.8467,12.8105C82.3106,12.8105,81.8764,13.2534,81.8764,13.7994C81.8764,15.1111,80.8249,16.1837,79.5399,16.1837L59.2847,16.1837C57.9988,16.1837,56.9473,15.1111,56.9473,13.7994C56.9473,13.2534,56.5132,12.8105,55.977,12.8105L50.2947,12.8105C48.7295,12.8105,47.4609,14.1046,47.4609,15.7003L47.4609,80.5489L91.3628,80.5489L91.3628,15.7003C91.3628,14.1046,90.0942,12.8105,88.529,12.8105Z"
                  fill="rgb(255,255,255)"
                  id="exzbnYXRMC59"
                  stroke="none"
                  stroke-width="1"
                />
              </g>
              <g
                id="exzbnYXRMC510"
                transform="matrix(1 0 0 1 0 0.000001)"
              >
                <path
                  d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,70.5692L50.8828,70.5692L50.8828,45.4146Z"
                  fill="rgb(38,47,105)"
                  id="exzbnYXRMC511"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,59.7267L50.8828,45.4146Z"
                  fill="rgb(123,201,235)"
                  id="exzbnYXRMC512"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M88.036,70.5692L77.1623,70.5692L61.7578,34.7519L69.46,27.1992L88.036,45.4146L88.036,70.5692Z"
                  fill="rgb(0,97,168)"
                  id="exzbnYXRMC513"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M88.036,45.4146L88.036,59.7267L69.46,52.6606L61.7578,34.7519L69.46,27.1992L88.036,45.4146Z"
                  fill="rgb(50,188,250)"
                  id="exzbnYXRMC514"
                  stroke="none"
                  stroke-width="1"
                />
              </g>
            </g>
            <g
              id="webhooks-docs-svg-element-three"
              transform="translate(69.649327,82.061558)"
            >
              <g
                id="exzbnYXRMC515"
                transform="translate(-69.649326,-79.061558)"
              >
                <path
                  d="M70.011522,75.96449C69.821404,76.74574,69.94991,79.38574,70.011522,81.24449L73.915483,77.719668L70.011522,75.96449Z"
                  fill="rgb(38,47,105)"
                  id="exzbnYXRMC516"
                  stroke="none"
                  stroke-width="0.28"
                  transform="matrix(1 0 0 1 0.000001 0.000003)"
                />
                <path
                  d="M69.992961,76.053166L69.975852,81.339889L73.932592,77.719668L69.992961,76.053166Z"
                  fill="rgb(49,68,143)"
                  id="exzbnYXRMC517"
                  stroke="none"
                  stroke-width="0.28"
                  transform="matrix(-1.168966 0 0 -1.168966 151.807857 171.062202)"
                />
              </g>
            </g>
            <path
              d="M69.9983,79.0023L20.9727,61.4512L20.9727,124.568L69.9983,140.345L69.9983,79.0023Z"
              fill="rgb(49,68,143)"
              id="exzbnYXRMC518"
              stroke="none"
              stroke-width="1"
            />
            <path
              d="M119.022,124.568L119.022,61.4512L69.9961,79.0023L69.9961,140.345L119.022,124.568Z"
              fill="rgb(38,47,105)"
              id="exzbnYXRMC519"
              stroke="none"
              stroke-width="1"
            />
            <g
              id="webhooks-docs-svg-element-four"
              transform="translate(36.9986,80.849051)"
            >
              <path
                d="M20.9715,61.4521L4,81.8288L53.9483,100.246L69.9972,78.955L20.9715,61.4521Z"
                fill="rgb(123,201,235)"
                id="exzbnYXRMC520"
                stroke="none"
                stroke-width="1"
                transform="translate(-36.9986,-80.849051)"
              />
            </g>
            <g
              id="webhooks-docs-svg-element-five"
              transform="translate(102.997547,80.848101)"
            >
              <path
                d="M119.022,61.4512L135.999,81.8278L86.0506,100.245L69.9961,78.954L119.022,61.4512Z"
                fill="rgb(35,164,222)"
                id="exzbnYXRMC521"
                stroke="none"
                stroke-width="1"
                transform="translate(-102.997547,-80.848101)"
              />
            </g>
            <g
              id="webhooks-docs-svg-element-six"
              transform="translate(89.264528,45.746041)"
            >
              <g
                id="webhooks-docs-svg-element-seven"
                transform="rotate(-67.423922)"
              >
                <g
                  id="webhooks-docs-svg-element-eight"
                  transform="skewX(-1.018603) skewY(0) scale(1,0.999842)"
                >
                  <rect
                    fill="rgb(255,229,199)"
                    height="12.724"
                    id="exzbnYXRMC522"
                    rx="3"
                    ry="3"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-6.34105,-6.362)"
                    width="12.6821"
                  />
                </g>
              </g>
            </g>
            <g
              id="webhooks-docs-svg-element-nine"
              style="offset-path: path("M37.255498,23.852076L39.921657,34.649638"); offset-rotate: auto;"
            >
              <g
                id="webhooks-docs-svg-element-ten"
                transform="rotate(-25.945515)"
              >
                <g
                  id="webhooks-docs-svg-element-eleven"
                  transform="skewX(0.740377) skewY(0) scale(0.999999,0.999917)"
                >
                  <rect
                    fill="rgb(255,183,27)"
                    height="25.3778"
                    id="exzbnYXRMC523"
                    rx="5"
                    ry="5"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-12.60465,-12.6889)"
                    width="25.2093"
                  />
                </g>
              </g>
            </g>
            <g
              id="webhooks-docs-svg-element-twelve"
              style="offset-path: path("M103.180305,18.127591L98.950013,25.52561"); offset-rotate: auto;"
            >
              <g
                id="webhooks-docs-svg-element-thirteen"
                transform="rotate(18.101295)"
              >
                <g
                  id="webhooks-docs-svg-element-fourteen"
                  transform="skewX(0.486255) skewY(0) scale(1,0.999964)"
                >
                  <rect
                    fill="rgb(255,229,199)"
                    height="9.95171"
                    id="exzbnYXRMC524"
                    rx="2"
                    ry="2"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-4.91747,-4.975855)"
                    width="9.83494"
                  />
                </g>
              </g>
            </g>
            <g
              id="webhooks-docs-svg-element-fifteen"
              transform="translate(45.246065,111.063275) scale(1,1)"
            >
              <path
                d="M49.1786,105.193L54.9201,106.917C58.5733,108.013,60.6997,111.91,59.6454,115.577C58.6123,119.17,54.8382,121.23,51.2585,120.155L45.6548,118.473C45.6173,118.462,45.6165,118.408,45.6538,118.398C46.9878,118.019,48.5126,117.072,49.4186,116.075C49.5037,115.981,49.6339,115.944,49.7564,115.98L52.4022,116.764C54.1343,117.284,55.9461,116.282,56.4284,114.538C56.9283,112.8,55.92,110.952,54.1877,110.432L49.8409,109.127C49.8413,109.129,49.8416,109.131,49.8419,109.133C48.6606,108.796,47.2904,108.259,46.2878,108.554C45.4956,108.768,44.8724,109.242,44.4331,109.881C44.0856,110.404,43.8731,111.116,43.8773,111.713C43.8784,111.87,43.7529,111.996,43.5982,111.985C42.5869,111.917,41.7006,111.695,40.7418,111.384C40.6129,111.343,40.528,111.216,40.5391,111.081C40.8757,106.968,45.03,103.979,49.1555,105.187C49.1632,105.189,49.1708,105.191,49.1786,105.193ZM43.17925,117.20304C41.95735,117.31656,36.90484,115.52796,35.5704,115.193C31.9542,114.107,29.8191,110.24,30.8259,106.6C31.8695,102.97,35.6823,100.889,39.2988,101.974L44.8181,103.631C44.8553,103.642,44.8567,103.695,44.8199,103.706C43.4999,104.108,42.0146,105.043,41.0756,106.042C40.9904,106.132,40.8623,106.167,40.742,106.131L38.0883,105.346C36.3562,104.826,34.5444,105.827,34.0621,107.571C33.5799,109.315,34.6026,111.167,36.3347,111.687C37.3004,111.977,39.7087,112.701,40.658,112.985L40.6582,112.984C41.9108,113.355,43.3657,113.885,44.4237,113.484C44.4238,113.484,44.4238,113.485,44.4239,113.485C45.2444,113.224,45.8201,112.633,46.0664,112.215L46.0658,112.215C46.4302,111.653,46.5916,111.02,46.6051,110.409C46.6087,110.246,46.7356,110.116,46.8968,110.111C47.923,110.078,48.8865,110.348,49.7175,110.706C49.8497,110.763,49.9491,110.928,49.9366,111.072C49.7916,112.742,48.9655,114.36,47.8191,115.405L47.8193,115.407L47.8217,115.408C46.5221,116.558,44.9172,117.235,43.1857,117.208C43.18352,117.20601,43.18143,117.20501,43.17925,117.20304Z"
                fill="rgb(242,242,242)"
                id="exzbnYXRMC525"
                stroke="none"
                stroke-width="1"
                transform="translate(-45.246065,-111.063274)"
              />
            </g>
          </g>
          <clippath
            id="exzbnYXRMC526"
          >
            <rect
              fill="rgb(255,255,255)"
              height="140"
              id="exzbnYXRMC527"
              rx="0"
              ry="0"
              stroke="none"
              stroke-width="1"
              width="140"
            />
          </clippath>
        </g>
      </svg>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <svg
      class="mock-css.
  #webhooks-docs-svg-element-one {
    animation: webhooks-docs-svg-element-one 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-one {
    0% {
      transform: translate(69.99835px, 61.58215px);
    }
    100% {
      transform: translate(69.99835px, 58.58215px);
    }
  }
  #webhooks-docs-svg-element-two {
    animation: webhooks-docs-svg-element-two 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-two {
    0% {
      transform: translate(94.509052px, 61.58215px);
    }
    100% {
      transform: translate(94.509052px, 58.58215px);
    }
  }
  #webhooks-docs-svg-element-three {
    animation: webhooks-docs-svg-element-three 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-three {
    0% {
      transform: translate(69.649327px, 82.061558px);
    }
    100% {
      transform: translate(69.649327px, 79.061558px);
    }
  }
  #webhooks-docs-svg-element-four {
    animation: webhooks-docs-svg-element-four 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-four {
    0% {
      transform: translate(36.9986px, 80.849051px);
    }
    100% {
      transform: translate(36.9986px, 77.849051px);
    }
  }
  #webhooks-docs-svg-element-five {
    animation: webhooks-docs-svg-element-five 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-five {
    0% {
      transform: translate(102.997547px, 80.848101px);
    }
    100% {
      transform: translate(102.997547px, 77.848101px);
    }
  }
  #webhooks-docs-svg-element-six {
    animation: webhooks-docs-svg-element-six 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-six {
    0% {
      transform: translate(89.264528px, 45.746041px);
    }
    100% {
      transform: translate(87.398217px, 52.544365px);
    }
  }
  #webhooks-docs-svg-element-seven {
    animation: webhooks-docs-svg-element-seven 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-seven {
    0% {
      transform: rotate(-67.423922deg);
    }
    100% {
      transform: rotate(-103deg);
    }
  }
  #webhooks-docs-svg-element-eight {
    animation: webhooks-docs-svg-element-eight 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-eight {
    0% {
      transform: skewX(-1.018603deg) skewY(0deg) scale(1, 0.999842);
    }
    100% {
      transform: skewX(-1.018603deg) skewY(0deg) scale(1.5, 1.5);
    }
  }
  #webhooks-docs-svg-element-nine {
    animation: webhooks-docs-svg-element-nine 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-nine {
    0% {
      offset-distance: 0%;
    }
    100% {
      offset-distance: 100%;
    }
  }
  #webhooks-docs-svg-element-ten {
    animation: webhooks-docs-svg-element-ten 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-ten {
    0% {
      transform: rotate(-25.945515deg);
    }
    100% {
      transform: rotate(47deg);
    }
  }
  #webhooks-docs-svg-element-eleven {
    animation: webhooks-docs-svg-element-eleven 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-eleven {
    0% {
      transform: skewX(0.740377deg) skewY(0deg) scale(0.999999, 0.999917);
    }
    100% {
      transform: skewX(0.740377deg) skewY(0deg) scale(1.3, 1.3);
    }
  }
  #webhooks-docs-svg-element-twelve {
    animation: webhooks-docs-svg-element-twelve 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-twelve {
    0% {
      offset-distance: 0%;
    }
    100% {
      offset-distance: 100%;
    }
  }
  #webhooks-docs-svg-element-thirteen {
    animation: webhooks-docs-svg-element-thirteen 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-thirteen {
    0% {
      transform: rotate(18.101295deg);
    }
    100% {
      transform: rotate(-62deg);
    }
  }
  #webhooks-docs-svg-element-fourteen {
    animation: webhooks-docs-svg-element-fourteen 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-fourteen {
    0% {
      transform: skewX(0.486255deg) skewY(0deg) scale(1, 0.999964);
    }
    100% {
      transform: skewX(0.486255deg) skewY(0deg) scale(1.3, 1.3);
    }
  }
  #webhooks-docs-svg-element-fifteen {
    animation: webhooks-docs-svg-element-fifteen 300ms linear 1 normal forwards;
  }
  @keyframes webhooks-docs-svg-element-fifteen {
    0% {
      transform: translate(45.246065px, 111.063275px) scale(1, 1);
    }
    100% {
      transform: translate(45.246065px, 111.063275px) scale(0.8, 0.8);
    }
  }
"
      id="exzbnYXRMC51"
      shape-rendering="geometricPrecision"
      text-rendering="geometricPrecision"
      viewBox="0 0 140 140"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <g
        clip-path="url(#exzbnYXRMC526)"
        id="exzbnYXRMC52"
      >
        <g
          id="exzbnYXRMC53"
        >
          <g
            id="webhooks-docs-svg-element-one"
            transform="translate(69.99835,61.58215)"
          >
            <path
              d="M119.024,61.4515L69.9983,44.21L20.9727,61.4515L69.9983,78.9543L119.024,61.4515Z"
              fill="rgb(35,164,222)"
              id="exzbnYXRMC54"
              stroke="none"
              stroke-width="1"
              transform="translate(-69.99835,-61.58215)"
            />
          </g>
          <g
            id="webhooks-docs-svg-element-two"
            transform="translate(94.509052,61.58215)"
          >
            <path
              d="M119.022,61.4515L69.9961,44.21L69.9961,78.9543L119.022,61.4515Z"
              fill="rgb(0,97,168)"
              id="exzbnYXRMC55"
              stroke="none"
              stroke-width="1"
              transform="translate(-94.509052,-61.58215)"
            />
          </g>
          <g
            id="exzbnYXRMC56"
            transform="matrix(1 0 0 1 0.000001 0)"
          >
            <g
              id="exzbnYXRMC57"
              transform="matrix(1 0 0 1 0.000001 0)"
            >
              <path
                d="M88.5528,8.83691L50.3176,8.83691C46.6078,8.83691,43.5898,11.9163,43.5898,15.7005L43.5898,97.8934C43.5898,101.678,46.6078,104.757,50.3176,104.757L88.5528,104.757C92.2626,104.757,95.2814,101.678,95.2814,97.8934L95.2814,15.7005C95.2814,11.9163,92.2626,8.83691,88.5528,8.83691L88.5528,8.83691Z"
                fill="rgb(38,47,105)"
                id="exzbnYXRMC58"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M88.529,12.8105L82.8467,12.8105C82.3106,12.8105,81.8764,13.2534,81.8764,13.7994C81.8764,15.1111,80.8249,16.1837,79.5399,16.1837L59.2847,16.1837C57.9988,16.1837,56.9473,15.1111,56.9473,13.7994C56.9473,13.2534,56.5132,12.8105,55.977,12.8105L50.2947,12.8105C48.7295,12.8105,47.4609,14.1046,47.4609,15.7003L47.4609,80.5489L91.3628,80.5489L91.3628,15.7003C91.3628,14.1046,90.0942,12.8105,88.529,12.8105Z"
                fill="rgb(255,255,255)"
                id="exzbnYXRMC59"
                stroke="none"
                stroke-width="1"
              />
            </g>
            <g
              id="exzbnYXRMC510"
              transform="matrix(1 0 0 1 0 0.000001)"
            >
              <path
                d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,70.5692L50.8828,70.5692L50.8828,45.4146Z"
                fill="rgb(38,47,105)"
                id="exzbnYXRMC511"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,59.7267L50.8828,45.4146Z"
                fill="rgb(123,201,235)"
                id="exzbnYXRMC512"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M88.036,70.5692L77.1623,70.5692L61.7578,34.7519L69.46,27.1992L88.036,45.4146L88.036,70.5692Z"
                fill="rgb(0,97,168)"
                id="exzbnYXRMC513"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M88.036,45.4146L88.036,59.7267L69.46,52.6606L61.7578,34.7519L69.46,27.1992L88.036,45.4146Z"
                fill="rgb(50,188,250)"
                id="exzbnYXRMC514"
                stroke="none"
                stroke-width="1"
              />
            </g>
          </g>
          <g
            id="webhooks-docs-svg-element-three"
            transform="translate(69.649327,82.061558)"
          >
            <g
              id="exzbnYXRMC515"
              transform="translate(-69.649326,-79.061558)"
            >
              <path
                d="M70.011522,75.96449C69.821404,76.74574,69.94991,79.38574,70.011522,81.24449L73.915483,77.719668L70.011522,75.96449Z"
                fill="rgb(38,47,105)"
                id="exzbnYXRMC516"
                stroke="none"
                stroke-width="0.28"
                transform="matrix(1 0 0 1 0.000001 0.000003)"
              />
              <path
                d="M69.992961,76.053166L69.975852,81.339889L73.932592,77.719668L69.992961,76.053166Z"
                fill="rgb(49,68,143)"
                id="exzbnYXRMC517"
                stroke="none"
                stroke-width="0.28"
                transform="matrix(-1.168966 0 0 -1.168966 151.807857 171.062202)"
              />
            </g>
          </g>
          <path
            d="M69.9983,79.0023L20.9727,61.4512L20.9727,124.568L69.9983,140.345L69.9983,79.0023Z"
            fill="rgb(49,68,143)"
            id="exzbnYXRMC518"
            stroke="none"
            stroke-width="1"
          />
          <path
            d="M119.022,124.568L119.022,61.4512L69.9961,79.0023L69.9961,140.345L119.022,124.568Z"
            fill="rgb(38,47,105)"
            id="exzbnYXRMC519"
            stroke="none"
            stroke-width="1"
          />
          <g
            id="webhooks-docs-svg-element-four"
            transform="translate(36.9986,80.849051)"
          >
            <path
              d="M20.9715,61.4521L4,81.8288L53.9483,100.246L69.9972,78.955L20.9715,61.4521Z"
              fill="rgb(123,201,235)"
              id="exzbnYXRMC520"
              stroke="none"
              stroke-width="1"
              transform="translate(-36.9986,-80.849051)"
            />
          </g>
          <g
            id="webhooks-docs-svg-element-five"
            transform="translate(102.997547,80.848101)"
          >
            <path
              d="M119.022,61.4512L135.999,81.8278L86.0506,100.245L69.9961,78.954L119.022,61.4512Z"
              fill="rgb(35,164,222)"
              id="exzbnYXRMC521"
              stroke="none"
              stroke-width="1"
              transform="translate(-102.997547,-80.848101)"
            />
          </g>
          <g
            id="webhooks-docs-svg-element-six"
            transform="translate(89.264528,45.746041)"
          >
            <g
              id="webhooks-docs-svg-element-seven"
              transform="rotate(-67.423922)"
            >
              <g
                id="webhooks-docs-svg-element-eight"
                transform="skewX(-1.018603) skewY(0) scale(1,0.999842)"
              >
                <rect
                  fill="rgb(255,229,199)"
                  height="12.724"
                  id="exzbnYXRMC522"
                  rx="3"
                  ry="3"
                  stroke="none"
                  stroke-width="1"
                  transform="translate(-6.34105,-6.362)"
                  width="12.6821"
                />
              </g>
            </g>
          </g>
          <g
            id="webhooks-docs-svg-element-nine"
            style="offset-path: path("M37.255498,23.852076L39.921657,34.649638"); offset-rotate: auto;"
          >
            <g
              id="webhooks-docs-svg-element-ten"
              transform="rotate(-25.945515)"
            >
              <g
                id="webhooks-docs-svg-element-eleven"
                transform="skewX(0.740377) skewY(0) scale(0.999999,0.999917)"
              >
                <rect
                  fill="rgb(255,183,27)"
                  height="25.3778"
                  id="exzbnYXRMC523"
                  rx="5"
                  ry="5"
                  stroke="none"
                  stroke-width="1"
                  transform="translate(-12.60465,-12.6889)"
                  width="25.2093"
                />
              </g>
            </g>
          </g>
          <g
            id="webhooks-docs-svg-element-twelve"
            style="offset-path: path("M103.180305,18.127591L98.950013,25.52561"); offset-rotate: auto;"
          >
            <g
              id="webhooks-docs-svg-element-thirteen"
              transform="rotate(18.101295)"
            >
              <g
                id="webhooks-docs-svg-element-fourteen"
                transform="skewX(0.486255) skewY(0) scale(1,0.999964)"
              >
                <rect
                  fill="rgb(255,229,199)"
                  height="9.95171"
                  id="exzbnYXRMC524"
                  rx="2"
                  ry="2"
                  stroke="none"
                  stroke-width="1"
                  transform="translate(-4.91747,-4.975855)"
                  width="9.83494"
                />
              </g>
            </g>
          </g>
          <g
            id="webhooks-docs-svg-element-fifteen"
            transform="translate(45.246065,111.063275) scale(1,1)"
          >
            <path
              d="M49.1786,105.193L54.9201,106.917C58.5733,108.013,60.6997,111.91,59.6454,115.577C58.6123,119.17,54.8382,121.23,51.2585,120.155L45.6548,118.473C45.6173,118.462,45.6165,118.408,45.6538,118.398C46.9878,118.019,48.5126,117.072,49.4186,116.075C49.5037,115.981,49.6339,115.944,49.7564,115.98L52.4022,116.764C54.1343,117.284,55.9461,116.282,56.4284,114.538C56.9283,112.8,55.92,110.952,54.1877,110.432L49.8409,109.127C49.8413,109.129,49.8416,109.131,49.8419,109.133C48.6606,108.796,47.2904,108.259,46.2878,108.554C45.4956,108.768,44.8724,109.242,44.4331,109.881C44.0856,110.404,43.8731,111.116,43.8773,111.713C43.8784,111.87,43.7529,111.996,43.5982,111.985C42.5869,111.917,41.7006,111.695,40.7418,111.384C40.6129,111.343,40.528,111.216,40.5391,111.081C40.8757,106.968,45.03,103.979,49.1555,105.187C49.1632,105.189,49.1708,105.191,49.1786,105.193ZM43.17925,117.20304C41.95735,117.31656,36.90484,115.52796,35.5704,115.193C31.9542,114.107,29.8191,110.24,30.8259,106.6C31.8695,102.97,35.6823,100.889,39.2988,101.974L44.8181,103.631C44.8553,103.642,44.8567,103.695,44.8199,103.706C43.4999,104.108,42.0146,105.043,41.0756,106.042C40.9904,106.132,40.8623,106.167,40.742,106.131L38.0883,105.346C36.3562,104.826,34.5444,105.827,34.0621,107.571C33.5799,109.315,34.6026,111.167,36.3347,111.687C37.3004,111.977,39.7087,112.701,40.658,112.985L40.6582,112.984C41.9108,113.355,43.3657,113.885,44.4237,113.484C44.4238,113.484,44.4238,113.485,44.4239,113.485C45.2444,113.224,45.8201,112.633,46.0664,112.215L46.0658,112.215C46.4302,111.653,46.5916,111.02,46.6051,110.409C46.6087,110.246,46.7356,110.116,46.8968,110.111C47.923,110.078,48.8865,110.348,49.7175,110.706C49.8497,110.763,49.9491,110.928,49.9366,111.072C49.7916,112.742,48.9655,114.36,47.8191,115.405L47.8193,115.407L47.8217,115.408C46.5221,116.558,44.9172,117.235,43.1857,117.208C43.18352,117.20601,43.18143,117.20501,43.17925,117.20304Z"
              fill="rgb(242,242,242)"
              id="exzbnYXRMC525"
              stroke="none"
              stroke-width="1"
              transform="translate(-45.246065,-111.063274)"
            />
          </g>
        </g>
        <clippath
          id="exzbnYXRMC526"
        >
          <rect
            fill="rgb(255,255,255)"
            height="140"
            id="exzbnYXRMC527"
            rx="0"
            ry="0"
            stroke="none"
            stroke-width="1"
            width="140"
          />
        </clippath>
      </g>
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksAnimatedDocsIcon should match a snapshot where not animated 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <svg
        class=""
        id="exzbnYXRMC51"
        shape-rendering="geometricPrecision"
        text-rendering="geometricPrecision"
        viewBox="0 0 140 140"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g
          clip-path="url(#exzbnYXRMC526)"
          id="exzbnYXRMC52"
        >
          <g
            id="exzbnYXRMC53"
          >
            <g
              id="webhooks-docs-svg-element-one"
              transform="translate(69.99835,61.58215)"
            >
              <path
                d="M119.024,61.4515L69.9983,44.21L20.9727,61.4515L69.9983,78.9543L119.024,61.4515Z"
                fill="rgb(35,164,222)"
                id="exzbnYXRMC54"
                stroke="none"
                stroke-width="1"
                transform="translate(-69.99835,-61.58215)"
              />
            </g>
            <g
              id="webhooks-docs-svg-element-two"
              transform="translate(94.509052,61.58215)"
            >
              <path
                d="M119.022,61.4515L69.9961,44.21L69.9961,78.9543L119.022,61.4515Z"
                fill="rgb(0,97,168)"
                id="exzbnYXRMC55"
                stroke="none"
                stroke-width="1"
                transform="translate(-94.509052,-61.58215)"
              />
            </g>
            <g
              id="exzbnYXRMC56"
              transform="matrix(1 0 0 1 0.000001 0)"
            >
              <g
                id="exzbnYXRMC57"
                transform="matrix(1 0 0 1 0.000001 0)"
              >
                <path
                  d="M88.5528,8.83691L50.3176,8.83691C46.6078,8.83691,43.5898,11.9163,43.5898,15.7005L43.5898,97.8934C43.5898,101.678,46.6078,104.757,50.3176,104.757L88.5528,104.757C92.2626,104.757,95.2814,101.678,95.2814,97.8934L95.2814,15.7005C95.2814,11.9163,92.2626,8.83691,88.5528,8.83691L88.5528,8.83691Z"
                  fill="rgb(38,47,105)"
                  id="exzbnYXRMC58"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M88.529,12.8105L82.8467,12.8105C82.3106,12.8105,81.8764,13.2534,81.8764,13.7994C81.8764,15.1111,80.8249,16.1837,79.5399,16.1837L59.2847,16.1837C57.9988,16.1837,56.9473,15.1111,56.9473,13.7994C56.9473,13.2534,56.5132,12.8105,55.977,12.8105L50.2947,12.8105C48.7295,12.8105,47.4609,14.1046,47.4609,15.7003L47.4609,80.5489L91.3628,80.5489L91.3628,15.7003C91.3628,14.1046,90.0942,12.8105,88.529,12.8105Z"
                  fill="rgb(255,255,255)"
                  id="exzbnYXRMC59"
                  stroke="none"
                  stroke-width="1"
                />
              </g>
              <g
                id="exzbnYXRMC510"
                transform="matrix(1 0 0 1 0 0.000001)"
              >
                <path
                  d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,70.5692L50.8828,70.5692L50.8828,45.4146Z"
                  fill="rgb(38,47,105)"
                  id="exzbnYXRMC511"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,59.7267L50.8828,45.4146Z"
                  fill="rgb(123,201,235)"
                  id="exzbnYXRMC512"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M88.036,70.5692L77.1623,70.5692L61.7578,34.7519L69.46,27.1992L88.036,45.4146L88.036,70.5692Z"
                  fill="rgb(0,97,168)"
                  id="exzbnYXRMC513"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M88.036,45.4146L88.036,59.7267L69.46,52.6606L61.7578,34.7519L69.46,27.1992L88.036,45.4146Z"
                  fill="rgb(50,188,250)"
                  id="exzbnYXRMC514"
                  stroke="none"
                  stroke-width="1"
                />
              </g>
            </g>
            <g
              id="webhooks-docs-svg-element-three"
              transform="translate(69.649327,82.061558)"
            >
              <g
                id="exzbnYXRMC515"
                transform="translate(-69.649326,-79.061558)"
              >
                <path
                  d="M70.011522,75.96449C69.821404,76.74574,69.94991,79.38574,70.011522,81.24449L73.915483,77.719668L70.011522,75.96449Z"
                  fill="rgb(38,47,105)"
                  id="exzbnYXRMC516"
                  stroke="none"
                  stroke-width="0.28"
                  transform="matrix(1 0 0 1 0.000001 0.000003)"
                />
                <path
                  d="M69.992961,76.053166L69.975852,81.339889L73.932592,77.719668L69.992961,76.053166Z"
                  fill="rgb(49,68,143)"
                  id="exzbnYXRMC517"
                  stroke="none"
                  stroke-width="0.28"
                  transform="matrix(-1.168966 0 0 -1.168966 151.807857 171.062202)"
                />
              </g>
            </g>
            <path
              d="M69.9983,79.0023L20.9727,61.4512L20.9727,124.568L69.9983,140.345L69.9983,79.0023Z"
              fill="rgb(49,68,143)"
              id="exzbnYXRMC518"
              stroke="none"
              stroke-width="1"
            />
            <path
              d="M119.022,124.568L119.022,61.4512L69.9961,79.0023L69.9961,140.345L119.022,124.568Z"
              fill="rgb(38,47,105)"
              id="exzbnYXRMC519"
              stroke="none"
              stroke-width="1"
            />
            <g
              id="webhooks-docs-svg-element-four"
              transform="translate(36.9986,80.849051)"
            >
              <path
                d="M20.9715,61.4521L4,81.8288L53.9483,100.246L69.9972,78.955L20.9715,61.4521Z"
                fill="rgb(123,201,235)"
                id="exzbnYXRMC520"
                stroke="none"
                stroke-width="1"
                transform="translate(-36.9986,-80.849051)"
              />
            </g>
            <g
              id="webhooks-docs-svg-element-five"
              transform="translate(102.997547,80.848101)"
            >
              <path
                d="M119.022,61.4512L135.999,81.8278L86.0506,100.245L69.9961,78.954L119.022,61.4512Z"
                fill="rgb(35,164,222)"
                id="exzbnYXRMC521"
                stroke="none"
                stroke-width="1"
                transform="translate(-102.997547,-80.848101)"
              />
            </g>
            <g
              id="webhooks-docs-svg-element-six"
              transform="translate(89.264528,45.746041)"
            >
              <g
                id="webhooks-docs-svg-element-seven"
                transform="rotate(-67.423922)"
              >
                <g
                  id="webhooks-docs-svg-element-eight"
                  transform="skewX(-1.018603) skewY(0) scale(1,0.999842)"
                >
                  <rect
                    fill="rgb(255,229,199)"
                    height="12.724"
                    id="exzbnYXRMC522"
                    rx="3"
                    ry="3"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-6.34105,-6.362)"
                    width="12.6821"
                  />
                </g>
              </g>
            </g>
            <g
              id="webhooks-docs-svg-element-nine"
              style="offset-path: path("M37.255498,23.852076L39.921657,34.649638"); offset-rotate: auto;"
            >
              <g
                id="webhooks-docs-svg-element-ten"
                transform="rotate(-25.945515)"
              >
                <g
                  id="webhooks-docs-svg-element-eleven"
                  transform="skewX(0.740377) skewY(0) scale(0.999999,0.999917)"
                >
                  <rect
                    fill="rgb(255,183,27)"
                    height="25.3778"
                    id="exzbnYXRMC523"
                    rx="5"
                    ry="5"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-12.60465,-12.6889)"
                    width="25.2093"
                  />
                </g>
              </g>
            </g>
            <g
              id="webhooks-docs-svg-element-twelve"
              style="offset-path: path("M103.180305,18.127591L98.950013,25.52561"); offset-rotate: auto;"
            >
              <g
                id="webhooks-docs-svg-element-thirteen"
                transform="rotate(18.101295)"
              >
                <g
                  id="webhooks-docs-svg-element-fourteen"
                  transform="skewX(0.486255) skewY(0) scale(1,0.999964)"
                >
                  <rect
                    fill="rgb(255,229,199)"
                    height="9.95171"
                    id="exzbnYXRMC524"
                    rx="2"
                    ry="2"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-4.91747,-4.975855)"
                    width="9.83494"
                  />
                </g>
              </g>
            </g>
            <g
              id="webhooks-docs-svg-element-fifteen"
              transform="translate(45.246065,111.063275) scale(1,1)"
            >
              <path
                d="M49.1786,105.193L54.9201,106.917C58.5733,108.013,60.6997,111.91,59.6454,115.577C58.6123,119.17,54.8382,121.23,51.2585,120.155L45.6548,118.473C45.6173,118.462,45.6165,118.408,45.6538,118.398C46.9878,118.019,48.5126,117.072,49.4186,116.075C49.5037,115.981,49.6339,115.944,49.7564,115.98L52.4022,116.764C54.1343,117.284,55.9461,116.282,56.4284,114.538C56.9283,112.8,55.92,110.952,54.1877,110.432L49.8409,109.127C49.8413,109.129,49.8416,109.131,49.8419,109.133C48.6606,108.796,47.2904,108.259,46.2878,108.554C45.4956,108.768,44.8724,109.242,44.4331,109.881C44.0856,110.404,43.8731,111.116,43.8773,111.713C43.8784,111.87,43.7529,111.996,43.5982,111.985C42.5869,111.917,41.7006,111.695,40.7418,111.384C40.6129,111.343,40.528,111.216,40.5391,111.081C40.8757,106.968,45.03,103.979,49.1555,105.187C49.1632,105.189,49.1708,105.191,49.1786,105.193ZM43.17925,117.20304C41.95735,117.31656,36.90484,115.52796,35.5704,115.193C31.9542,114.107,29.8191,110.24,30.8259,106.6C31.8695,102.97,35.6823,100.889,39.2988,101.974L44.8181,103.631C44.8553,103.642,44.8567,103.695,44.8199,103.706C43.4999,104.108,42.0146,105.043,41.0756,106.042C40.9904,106.132,40.8623,106.167,40.742,106.131L38.0883,105.346C36.3562,104.826,34.5444,105.827,34.0621,107.571C33.5799,109.315,34.6026,111.167,36.3347,111.687C37.3004,111.977,39.7087,112.701,40.658,112.985L40.6582,112.984C41.9108,113.355,43.3657,113.885,44.4237,113.484C44.4238,113.484,44.4238,113.485,44.4239,113.485C45.2444,113.224,45.8201,112.633,46.0664,112.215L46.0658,112.215C46.4302,111.653,46.5916,111.02,46.6051,110.409C46.6087,110.246,46.7356,110.116,46.8968,110.111C47.923,110.078,48.8865,110.348,49.7175,110.706C49.8497,110.763,49.9491,110.928,49.9366,111.072C49.7916,112.742,48.9655,114.36,47.8191,115.405L47.8193,115.407L47.8217,115.408C46.5221,116.558,44.9172,117.235,43.1857,117.208C43.18352,117.20601,43.18143,117.20501,43.17925,117.20304Z"
                fill="rgb(242,242,242)"
                id="exzbnYXRMC525"
                stroke="none"
                stroke-width="1"
                transform="translate(-45.246065,-111.063274)"
              />
            </g>
          </g>
          <clippath
            id="exzbnYXRMC526"
          >
            <rect
              fill="rgb(255,255,255)"
              height="140"
              id="exzbnYXRMC527"
              rx="0"
              ry="0"
              stroke="none"
              stroke-width="1"
              width="140"
            />
          </clippath>
        </g>
      </svg>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <svg
      class=""
      id="exzbnYXRMC51"
      shape-rendering="geometricPrecision"
      text-rendering="geometricPrecision"
      viewBox="0 0 140 140"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <g
        clip-path="url(#exzbnYXRMC526)"
        id="exzbnYXRMC52"
      >
        <g
          id="exzbnYXRMC53"
        >
          <g
            id="webhooks-docs-svg-element-one"
            transform="translate(69.99835,61.58215)"
          >
            <path
              d="M119.024,61.4515L69.9983,44.21L20.9727,61.4515L69.9983,78.9543L119.024,61.4515Z"
              fill="rgb(35,164,222)"
              id="exzbnYXRMC54"
              stroke="none"
              stroke-width="1"
              transform="translate(-69.99835,-61.58215)"
            />
          </g>
          <g
            id="webhooks-docs-svg-element-two"
            transform="translate(94.509052,61.58215)"
          >
            <path
              d="M119.022,61.4515L69.9961,44.21L69.9961,78.9543L119.022,61.4515Z"
              fill="rgb(0,97,168)"
              id="exzbnYXRMC55"
              stroke="none"
              stroke-width="1"
              transform="translate(-94.509052,-61.58215)"
            />
          </g>
          <g
            id="exzbnYXRMC56"
            transform="matrix(1 0 0 1 0.000001 0)"
          >
            <g
              id="exzbnYXRMC57"
              transform="matrix(1 0 0 1 0.000001 0)"
            >
              <path
                d="M88.5528,8.83691L50.3176,8.83691C46.6078,8.83691,43.5898,11.9163,43.5898,15.7005L43.5898,97.8934C43.5898,101.678,46.6078,104.757,50.3176,104.757L88.5528,104.757C92.2626,104.757,95.2814,101.678,95.2814,97.8934L95.2814,15.7005C95.2814,11.9163,92.2626,8.83691,88.5528,8.83691L88.5528,8.83691Z"
                fill="rgb(38,47,105)"
                id="exzbnYXRMC58"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M88.529,12.8105L82.8467,12.8105C82.3106,12.8105,81.8764,13.2534,81.8764,13.7994C81.8764,15.1111,80.8249,16.1837,79.5399,16.1837L59.2847,16.1837C57.9988,16.1837,56.9473,15.1111,56.9473,13.7994C56.9473,13.2534,56.5132,12.8105,55.977,12.8105L50.2947,12.8105C48.7295,12.8105,47.4609,14.1046,47.4609,15.7003L47.4609,80.5489L91.3628,80.5489L91.3628,15.7003C91.3628,14.1046,90.0942,12.8105,88.529,12.8105Z"
                fill="rgb(255,255,255)"
                id="exzbnYXRMC59"
                stroke="none"
                stroke-width="1"
              />
            </g>
            <g
              id="exzbnYXRMC510"
              transform="matrix(1 0 0 1 0 0.000001)"
            >
              <path
                d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,70.5692L50.8828,70.5692L50.8828,45.4146Z"
                fill="rgb(38,47,105)"
                id="exzbnYXRMC511"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,59.7267L50.8828,45.4146Z"
                fill="rgb(123,201,235)"
                id="exzbnYXRMC512"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M88.036,70.5692L77.1623,70.5692L61.7578,34.7519L69.46,27.1992L88.036,45.4146L88.036,70.5692Z"
                fill="rgb(0,97,168)"
                id="exzbnYXRMC513"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M88.036,45.4146L88.036,59.7267L69.46,52.6606L61.7578,34.7519L69.46,27.1992L88.036,45.4146Z"
                fill="rgb(50,188,250)"
                id="exzbnYXRMC514"
                stroke="none"
                stroke-width="1"
              />
            </g>
          </g>
          <g
            id="webhooks-docs-svg-element-three"
            transform="translate(69.649327,82.061558)"
          >
            <g
              id="exzbnYXRMC515"
              transform="translate(-69.649326,-79.061558)"
            >
              <path
                d="M70.011522,75.96449C69.821404,76.74574,69.94991,79.38574,70.011522,81.24449L73.915483,77.719668L70.011522,75.96449Z"
                fill="rgb(38,47,105)"
                id="exzbnYXRMC516"
                stroke="none"
                stroke-width="0.28"
                transform="matrix(1 0 0 1 0.000001 0.000003)"
              />
              <path
                d="M69.992961,76.053166L69.975852,81.339889L73.932592,77.719668L69.992961,76.053166Z"
                fill="rgb(49,68,143)"
                id="exzbnYXRMC517"
                stroke="none"
                stroke-width="0.28"
                transform="matrix(-1.168966 0 0 -1.168966 151.807857 171.062202)"
              />
            </g>
          </g>
          <path
            d="M69.9983,79.0023L20.9727,61.4512L20.9727,124.568L69.9983,140.345L69.9983,79.0023Z"
            fill="rgb(49,68,143)"
            id="exzbnYXRMC518"
            stroke="none"
            stroke-width="1"
          />
          <path
            d="M119.022,124.568L119.022,61.4512L69.9961,79.0023L69.9961,140.345L119.022,124.568Z"
            fill="rgb(38,47,105)"
            id="exzbnYXRMC519"
            stroke="none"
            stroke-width="1"
          />
          <g
            id="webhooks-docs-svg-element-four"
            transform="translate(36.9986,80.849051)"
          >
            <path
              d="M20.9715,61.4521L4,81.8288L53.9483,100.246L69.9972,78.955L20.9715,61.4521Z"
              fill="rgb(123,201,235)"
              id="exzbnYXRMC520"
              stroke="none"
              stroke-width="1"
              transform="translate(-36.9986,-80.849051)"
            />
          </g>
          <g
            id="webhooks-docs-svg-element-five"
            transform="translate(102.997547,80.848101)"
          >
            <path
              d="M119.022,61.4512L135.999,81.8278L86.0506,100.245L69.9961,78.954L119.022,61.4512Z"
              fill="rgb(35,164,222)"
              id="exzbnYXRMC521"
              stroke="none"
              stroke-width="1"
              transform="translate(-102.997547,-80.848101)"
            />
          </g>
          <g
            id="webhooks-docs-svg-element-six"
            transform="translate(89.264528,45.746041)"
          >
            <g
              id="webhooks-docs-svg-element-seven"
              transform="rotate(-67.423922)"
            >
              <g
                id="webhooks-docs-svg-element-eight"
                transform="skewX(-1.018603) skewY(0) scale(1,0.999842)"
              >
                <rect
                  fill="rgb(255,229,199)"
                  height="12.724"
                  id="exzbnYXRMC522"
                  rx="3"
                  ry="3"
                  stroke="none"
                  stroke-width="1"
                  transform="translate(-6.34105,-6.362)"
                  width="12.6821"
                />
              </g>
            </g>
          </g>
          <g
            id="webhooks-docs-svg-element-nine"
            style="offset-path: path("M37.255498,23.852076L39.921657,34.649638"); offset-rotate: auto;"
          >
            <g
              id="webhooks-docs-svg-element-ten"
              transform="rotate(-25.945515)"
            >
              <g
                id="webhooks-docs-svg-element-eleven"
                transform="skewX(0.740377) skewY(0) scale(0.999999,0.999917)"
              >
                <rect
                  fill="rgb(255,183,27)"
                  height="25.3778"
                  id="exzbnYXRMC523"
                  rx="5"
                  ry="5"
                  stroke="none"
                  stroke-width="1"
                  transform="translate(-12.60465,-12.6889)"
                  width="25.2093"
                />
              </g>
            </g>
          </g>
          <g
            id="webhooks-docs-svg-element-twelve"
            style="offset-path: path("M103.180305,18.127591L98.950013,25.52561"); offset-rotate: auto;"
          >
            <g
              id="webhooks-docs-svg-element-thirteen"
              transform="rotate(18.101295)"
            >
              <g
                id="webhooks-docs-svg-element-fourteen"
                transform="skewX(0.486255) skewY(0) scale(1,0.999964)"
              >
                <rect
                  fill="rgb(255,229,199)"
                  height="9.95171"
                  id="exzbnYXRMC524"
                  rx="2"
                  ry="2"
                  stroke="none"
                  stroke-width="1"
                  transform="translate(-4.91747,-4.975855)"
                  width="9.83494"
                />
              </g>
            </g>
          </g>
          <g
            id="webhooks-docs-svg-element-fifteen"
            transform="translate(45.246065,111.063275) scale(1,1)"
          >
            <path
              d="M49.1786,105.193L54.9201,106.917C58.5733,108.013,60.6997,111.91,59.6454,115.577C58.6123,119.17,54.8382,121.23,51.2585,120.155L45.6548,118.473C45.6173,118.462,45.6165,118.408,45.6538,118.398C46.9878,118.019,48.5126,117.072,49.4186,116.075C49.5037,115.981,49.6339,115.944,49.7564,115.98L52.4022,116.764C54.1343,117.284,55.9461,116.282,56.4284,114.538C56.9283,112.8,55.92,110.952,54.1877,110.432L49.8409,109.127C49.8413,109.129,49.8416,109.131,49.8419,109.133C48.6606,108.796,47.2904,108.259,46.2878,108.554C45.4956,108.768,44.8724,109.242,44.4331,109.881C44.0856,110.404,43.8731,111.116,43.8773,111.713C43.8784,111.87,43.7529,111.996,43.5982,111.985C42.5869,111.917,41.7006,111.695,40.7418,111.384C40.6129,111.343,40.528,111.216,40.5391,111.081C40.8757,106.968,45.03,103.979,49.1555,105.187C49.1632,105.189,49.1708,105.191,49.1786,105.193ZM43.17925,117.20304C41.95735,117.31656,36.90484,115.52796,35.5704,115.193C31.9542,114.107,29.8191,110.24,30.8259,106.6C31.8695,102.97,35.6823,100.889,39.2988,101.974L44.8181,103.631C44.8553,103.642,44.8567,103.695,44.8199,103.706C43.4999,104.108,42.0146,105.043,41.0756,106.042C40.9904,106.132,40.8623,106.167,40.742,106.131L38.0883,105.346C36.3562,104.826,34.5444,105.827,34.0621,107.571C33.5799,109.315,34.6026,111.167,36.3347,111.687C37.3004,111.977,39.7087,112.701,40.658,112.985L40.6582,112.984C41.9108,113.355,43.3657,113.885,44.4237,113.484C44.4238,113.484,44.4238,113.485,44.4239,113.485C45.2444,113.224,45.8201,112.633,46.0664,112.215L46.0658,112.215C46.4302,111.653,46.5916,111.02,46.6051,110.409C46.6087,110.246,46.7356,110.116,46.8968,110.111C47.923,110.078,48.8865,110.348,49.7175,110.706C49.8497,110.763,49.9491,110.928,49.9366,111.072C49.7916,112.742,48.9655,114.36,47.8191,115.405L47.8193,115.407L47.8217,115.408C46.5221,116.558,44.9172,117.235,43.1857,117.208C43.18352,117.20601,43.18143,117.20501,43.17925,117.20304Z"
              fill="rgb(242,242,242)"
              id="exzbnYXRMC525"
              stroke="none"
              stroke-width="1"
              transform="translate(-45.246065,-111.063274)"
            />
          </g>
        </g>
        <clippath
          id="exzbnYXRMC526"
        >
          <rect
            fill="rgb(255,255,255)"
            height="140"
            id="exzbnYXRMC527"
            rx="0"
            ry="0"
            stroke="none"
            stroke-width="1"
            width="140"
          />
        </clippath>
      </g>
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
